Fix alignment

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -42,7 +42,7 @@
 
     .button {
       margin-left: auto;
-      margin-right: 16px;
+      margin-right: 12px;
       box-shadow: none;
     }
   }
@@ -53,7 +53,7 @@
     box-sizing: border-box;
     height: 48px;
     line-height: 42px;
-    padding: 3px 16px;
+    padding: 3px 12px;
     margin-bottom: 0;
     font-weight: 500;
     transition: box-shadow 0.1s linear;
